--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hacker Times</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <!-- NEWSPAPER CONTAINER -->
   <div class="newspaper-container">
     <!-- header -->
-    <header>
+    <header class="header">
       <div class="date">JANUARY 1, 1970</div>
       <h1>The Hacker Times</h1>
     </header>
     <!-- navigation -->
-    <nav>
+    <nav class="nav">
       <ul>
         <li><a href="#">HTML & CSS</a></li>
         <li><a href="#">UX & UI</a></li>
